--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "logo": "https://opencollective.com/react-native-elements/logo.txt"
   },
   "dependencies": {
+    "react": "16.6.3",
+    "react-native": "0.57.8",
     "lodash.merge": "^4.6.1",
     "lodash.times": "^4.3.2",
     "opencollective-postinstall": "^2.0.0",
@@ -46,7 +48,7 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "22.4.3",
     "babel-loader": "^6.3.2",
-    "babel-preset-react-native": "4.0.0",
+    "metro-react-native-babel-preset": "0.51.1",
     "codecov": "^2.1.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -62,7 +64,7 @@
     "prettier": "^1.10.2",
     "react": "16.3.1",
     "react-dom": "16.2.0",
-    "react-native": "0.55.4",
+    "react-native": "^0.57.8",
     "react-native-vector-icons": "^4.4.2",
     "react-test-renderer": "16.3.1",
     "webpack": "^2.2.1"
